[aliases]
test = pytest

[metadata]
license_files = 
    LICENSE.txt

[tool:pytest]
norecursedirs = .* *.egg* build dist secrets

[coverage:run]
omit =
    docs/*
    tests/*
    sql/*
    conf/*
    */_version.py
    */wsgi.py
    */config*.py
    */app.py
    */ext.py
    */templates.py
    */__init__.py

[tool:isort]
multi_line_output = 5
include_trailing_comma = true
combine_as_imports = true

[flake8]
max-line-length = 88

[versioneer]
VCS = git
style = pep440
versionfile_source = brewlog/_version.py
versionfile_build = brewlog/_version.py
tag_prefix =
parentdir_prefix =

[extract_messages]
keywords = _ gettext ngettext gettext_lazy
mapping_file = babel.cfg
width = 80
output_file = brewlog/translations/messages.pot
input_dirs = brewlog

[init_catalog]
domain = messages
input_file = brewlog/translations/messages.pot
output_dir = brewlog/translations

[compile_catalog]
domain = messages
directory = brewlog/translations
use_fuzzy = true

[update_catalog]
domain = messages
output_dir = brewlog/translations
input_file = brewlog/translations/messages.pot
