[aliases]
test = pytest

[metadata]
license_files = 
    LICENSE.txt

[tool:pytest]
norecursedirs = .* *.egg* build dist secrets

[coverage:run]
omit =
    docs/*
    tests/*
    sql/*
    conf/*
    src/brewlog/_version.py
    src/brewlog/cli.py
    src/brewlog/wsgi.py
    src/brewlog/config*.py
    src/brewlog/app.py
    src/brewlog/ext.py
    src/brewlog/templates.py
    src/brewlog/__init__.py

[tool:isort]
multi_line_output = 5
include_trailing_comma = true
combine_as_imports = true

[flake8]
max-line-length = 88

[extract_messages]
keywords = lazy_gettext
mapping_file = babel.cfg
width = 80
output_file = src/brewlog/translations/messages.pot
input_dirs = src/brewlog

[init_catalog]
domain = messages
input_file = src/brewlog/translations/messages.pot
output_dir = src/brewlog/translations

[compile_catalog]
domain = messages
directory = src/brewlog/translations
use_fuzzy = true

[update_catalog]
domain = messages
output_dir = src/brewlog/translations
input_file = src/brewlog/translations/messages.pot
