[metadata]
license_files = 
    LICENSE

[tool:pytest]
norecursedirs = .* *.egg* build dist migrations

[coverage:run]
omit =
    docs/*
    tests/*
    sql/*
    conf/*
    migrations/*
    src/brewlog/_version.py
    src/brewlog/cli.py
    src/brewlog/wsgi.py
    src/brewlog/config*.py
    src/brewlog/app.py
    src/brewlog/ext.py
    src/brewlog/templates.py
    src/brewlog/__init__.py

[tool:isort]
multi_line_output = 5
include_trailing_comma = true
combine_as_imports = true
line_length = 88

[flake8]
max-line-length = 88
pytest-parametrize-names-type = csv
per-file-ignores =
    src/brewlog/schema.py:A003
    tests/test_forms.py:PT012
